fixed issue with SimpleMDE lines not breaking when really long (stretching editor instead)

--- a/mod-picker/app/assets/stylesheets/general/global.scss
+++ b/mod-picker/app/assets/stylesheets/general/global.scss
@@ -509,6 +509,10 @@ input[type="text"], input[type="email"], input[type="password"] {
   div.CodeMirror-cursor {
     border-left: 1px solid $text_color;
   }
+
+  .CodeMirror-line {
+    @include wordbreak;
+  }
 }
 
 .editor-toolbar {
